@@ -1,3 +1,12 @@
+
+Use warnings::warnif instead of just warn for columns < 2.  Appled per
+request of Rafael Garcia-Suarez <rgarciasuarez at gmail.com>.
+
+= 2006/11/17
+
+Text::Tabs can handle newlines now so the BUGS section has been removed
+per request from Aristotle Pagaltzis.
+
 = 2006/07/11
 
 Further bomb-proofing to pass more tests: Dan Jacobson <jidanni at 
